--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
 	margin: 0;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
+	color: #666;
 }
 .a, .b, .c, .d, .e, .f, .g, .h, .i, .j, .k, .l, .m, .n, .o, .p, .q, .r, .s, .t, .u, .v, .w, .x, .y, .z {
 	display: none;
@@ -11,9 +12,34 @@ body {
 	height: 141px;
 	margin-bottom: 5px;
 }
-h1 {
-	margin: 0 0 20px 0;
+a {
+	color: #000;
+	text-decoration: underline;
 }
+a:hover {
+	color: #388B1E;
+	text-decoration: underline;
+}
+h1 {
+	margin: 0 0 5px 0;
+	color: #388B1E;
+}
+	h1 span {
+		font-weight: normal;
+	}
+p {
+	display: inline-block;
+	vertical-align: top;
+	background-color: #388B1E;
+	padding: 5px;
+	color: white;
+	margin: 0 0 20px 0;
+	cursor: pointer;
+}
+	p strong {
+		color: #6CEB00;
+	}
+
 @media all and (max-width: 820px) {
 	div.txt {
 		width: 100%;
@@ -21,7 +47,7 @@ h1 {
 		margin: 0 10px 20px 0;
 	}
 	#wrap {
-		position:relative; left:0; width:100%; top:0; height:100%;
+		position: relative; left:0; width:100%; top:0; height:100%;
 	}
 	#imgs {
 		width: 100%;
@@ -43,7 +69,7 @@ h1 {
 	#wrap {
 		display: inline-block;
 		vertical-align: top;
-		position:relative; left:0; width:78%; top:0; height:50%;
+		position:relative; left:0; width:78%; top:0; height:100%;
 	}
 	#imgs {
 		width: 100%;
@@ -65,4 +91,12 @@ pre {
 }
 pre span {
 	color: red;
+}
+label {
+	font-weight: bold;
+	color: #388B1E;
+}
+img.thumb {
+	max-width: 60px;
+	max-height: 50px;
 }
